--- a/spe_preferences/templates/spe_preferences/additional_preferences.html
+++ b/spe_preferences/templates/spe_preferences/additional_preferences.html
@@ -1,5 +1,5 @@
 {% extends "www_base.html" %}
-{% load cms_tags sekizai_tags %}
+{% load cms_tags sekizai_tags var_tags %}
 
 {% block title %}Communication Preferences - SPE{% endblock title %}
 {% block content %}
@@ -42,17 +42,29 @@
             </div>
         {% endif %}
         </div>
+
         <div id="prefs_panel">
         <form id=prefs_form action="{% url 'add_prefs_insert' %}" method="POST" class="prefs_form">
             {% csrf_token %}
-            {{ form.non_field_errors }}
-            {% for field in prefs_form %}
-                <div class="fieldWrapper">
-                {{ field.errors }}
-                {{ field.label_tag }} {{ field }}
-                {% if field.help_text %}
-                    <p class="help">{{ field.help_text|safe }}</p>
+            <div class="fieldWrapper">
+                <label for="prefs_customer_id">Customer id:</label> <input id="prefs_customer_id" maxlength="12" name="customer_id" type="text" />
+            </div>
+            {% set_var "" as cur_gid %}
+            {% for pgroup in pgroups %}
+                {{ cur_gid }}
+                {% if pgroup.id != cur_gid %}
+                    <h3>{{ pgroup.name }}</h3>
+                    {% set_var "{{pgroup.id}}" as cur_gid %}
                 {% endif %}
+                <div class="fieldWrapper">
+                    <h4>{{ pgroup.name }}</h4><!-- id: {{ pgroup.id }} -->
+                </div>
+                <div class="fieldWrapper">
+                {% for pitem in pitems %}
+                    {% if pitem.group_id == pgroup.id %}
+                        <label for="id_g{{ pitem.group_id }}_p{{ pitem.id }}"><input id="id_g{{ pitem.group_id }}_p{{ pitem.id }}" name="prefs_{{ pitem.group_id }}" type="checkbox" value="{{ pitem.id }}" /> {{ pitem.name }}</label>
+                    {% endif %}
+                {% endfor %}
                 </div>
             {% endfor %}
 {#            <p><label for="cid">Customer id:</label> <input id="cid" maxlength="12" name="customer_id" type="text" value="{{ cid }}" /></p>#}
@@ -91,14 +103,14 @@
                     // enable the search and disable the preferences
                     $('#search_button').attr('disabled', false);
                     $('#submit_button').attr('disabled', true);
-                    $('#search_panel').show();
-                    $('#prefs_panel').hide();
+                    // $('#search_panel').show();
+                    // $('#prefs_panel').hide();
                 } else {
                     $('#search_button').attr('disabled', true);
                     $('#submit_button').attr('disabled', false);
-                    $('#picks_customer_id').val('{{ cid }}');
-                    $('#search_panel').hide();
-                    $('#prefs_panel').show();
+                    $('#prefs_customer_id').val('{{ cid }}');
+                    // $('#search_panel').hide();
+                    // s$('#prefs_panel').show();
                 }
 //                console.log("Page Level Javascript Ran!");
 
