--- a/mainsite/templates/z_boostrap_size_indicator.html
+++ b/mainsite/templates/z_boostrap_size_indicator.html
@@ -8,7 +8,7 @@
                 height:55px;
                 width:80px;
                 position:fixed;
-                left:25px;
+                right:25px;
                 bottom:25px;
                 border: 1px solid lightgrey;
             }
@@ -16,7 +16,7 @@
                 z-index: 10000;
                 position: fixed;
                 bottom:40px;
-                left:30px;
+                right:30px;
                 font-size:30px;
                 font-weight:700;
                 color:hotpink;
@@ -25,7 +25,7 @@
                 z-index: 10000;
                 position: fixed;
                 bottom:30px;
-                left:30px;
+                right:30px;
                 font-size:10px;
                 font-weight:700;
                 color:rebeccapurple;
