--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -7,7 +7,7 @@
   background-color:     $col-white;
 }
 
-.tile, .tile-blue, .tile-lightblue, .tile-white, .tile-alert {
+.tile, .tile-blue, .tile-lightblue, .tile-white, .tile-alert{
   box-shadow:           0 1px 2px $col-boxshadow;
   margin-bottom:        20px;
   padding:              15px;
@@ -47,9 +47,15 @@
   }
 }
 .tileImgBack {
-  background-position: center;
-  -webkit-background-size: cover;
-  background-size: cover;
+  box-shadow:               0 1px 2px $col-boxshadow;
+  background-position:      center;
+  -webkit-background-size:  cover;
+  background-size:          cover;
+  margin-bottom:            20px;
+}
+.tile-adspeed {
+  margin-bottom:        20px;
+  box-shadow:           0 1px 2px $col-boxshadow;
 }
 .tile-editorial {
   background-color:     $col_black;
@@ -239,6 +245,7 @@
   border-bottom:        1px dotted $col-medgrey;
   padding-bottom:       10px;
   margin-bottom:        15px;
+  font-weight:          $font-bold;
 }
 .tileDate {
   font-weight:          $font-bold;
