--- a/spe_preferences/templates/spe_preferences/content_interests.html
+++ b/spe_preferences/templates/spe_preferences/content_interests.html
@@ -52,6 +52,17 @@
     #search_button {
         margin-top: 30px;
     }
+    .prefs_group {
+        border-bottom: 1px solid #e5e5e5;
+        padding-bottom: 10px;
+        margin-bottom:  20px;
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    }
+    .prefs_group_header {
+        font-size:      15px;
+        font-weight:    bold;
+        margin-bottom:  15px;
+    }
 </style>
     {%  endaddtoblock %}
 
