fixing three bad links that were causing thousands of 404 errors

--- a/mainsite/templates/twa_base.html
+++ b/mainsite/templates/twa_base.html
@@ -42,7 +42,7 @@
                             <li><a href="http://www.spe.org/jpt/">JPT</a></li>
                             <li><a href="https://www.spe.org/en/ogf/ogf-main-page/">OGF</a></li>
                             <li><a href="http://www.spe.org/hsenow/">HSE Now</a></li>
-                            <li><a href="http://www.spe.org/twa/">The Way Ahead</a></li>
+                            <li><a href="https://www.spe.org/en/twa/">The Way Ahead</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 text-right topbarcol">
@@ -67,7 +67,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-4 col-md-3" id="mainLogo">
-                        <a href="/twa/twa-main-page/"><img src="{% static 'twa/img/twa_logo.svg' %}" class="img-responsive"></a>
+                        <a href="https://www.spe.org/en/twa/twa-main-page/"><img src="{% static 'twa/img/twa_logo.svg' %}" class="img-responsive"></a>
                     </div>
                     <div class="col-md-9 text-right">
                         <ul class="pubMenu">
@@ -180,8 +180,8 @@
                     </div>
                     <div class="col-md-2">
                         <h3>UTILITY</h3>
-                        <p><a href="https://www.spe.org/en/twa/archives/twa/about-twa/">About</a></p>
-                        <p><a href="https://www.spe.org/en/twa/archives/twa/twa-editorial-board/">TWA Editorial Board</a></p>
+                        <p><a href="https://www.spe.org/en/twa/about-twa/">About</a></p>
+                        <p><a href="https://www.spe.org/en/twa/twa-editorial-board/">TWA Editorial Board</a></p>
                         <p><a href="https://www.spe.org/en/twa/contact/">Contact</a></p>
                         <p><a href="https://www.spe.org/en/twa/advertise/">Advertise</a></p>
                     </div>
